--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,6 @@
+@import 'reset';
+@import 'variable';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('@/assets/scss/reset.scss');
